...
    val title: String,
    val loadingMessage: String,
    val emptyMessage: String,
    val searchErrorMessage: String,
) {
    Discogs(
        title = "Search for your record manually",
        loadingMessage = "Searching Discogs...",
        emptyMessage = "No results found.",
        searchErrorMessage = "Search failed. Retry in a moment.",
    ),
    Collection(
        title = "Search your collection",
...
